--- a/templates/goalsForm.html
+++ b/templates/goalsForm.html
@@ -1,5 +1,6 @@
+<div class="row">
 <h3>Teaching Goals:</h3>
-<form method='post' action="">
+<form method='post' action="?/user/profile">
 	<div class="form-group">
 		<label for="title">Goal:</label>
 		<input class="form-control" autofocus required type='text' name='goal' placeholder="What's your goal?">
@@ -23,6 +24,7 @@
 		</select>
 	</div>
 	<div class="form-group">
-		<button class="transparentbtn" type="submit" name="goalUserID" value="{{sessionUserID}}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add goal</button>
+		<button class="transparentbtn" type="submit" name="goalUserID" value="{{userID}}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add goal</button>
 	</div>
 </form>
+</div>
