--- a/templates/index.html
+++ b/templates/index.html
@@ -1,58 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>{{title}}</title>
-	<!-- Latest compiled and minified CSS BOOTSTRAP -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<style type="text/css">
-		.grayText{
-			color: silver;
-		}
-		.h1link{
-			color: black;
-			text-decoration: none;
-		}
-		.h1link:hover, .h1link:focus, .h1link:active{
-			color: black;
-			text-decoration: none;
-		}
-		.user-header{
-			background-color: lightblue;
-		}
-		.row{
-			padding-top: 10px;
-			padding-bottom: 20px;
-		}
-		.invisibleinput, .transparentbtn{
-			border:none;
-			background-color: transparent;
-			background-image: none;
-			text-shadow: none;
-			box-shadow: none;
-		}
-		.transparentbtn:hover{
-			background-color: transparent;
-			color: white;
-		}
-		.transparentbtn:focus{
-			background-color: transparent;
-			background-image: none;
-		}
-		.transparentbtn:active{
-			background-color: transparent;
-			background-image: none;
-		}
-		.ratingButton{
-			border: none;
-			background-color: transparent;
-		}
-		.ratingWidth{
-			width: 40px;
-		}
-	</style>
-</head>
-<body>
+
+{% include "header.html" %}
+
 	<div class="container-fluid">
 		<div class="row user-header">
 			<div class="col-lg-12">
@@ -60,31 +8,17 @@
 			</div>
 			<div class="col-sm-8">
 
-<a href="/Fantastic-Teaching/?/Content/viewArticleUses">
-			<h5>Mina artiklar</h5></a>
-
-
-<ul class="list-group">
-<!-- // bheövs sen som villkor if row.user ==  sessionUserID -->
-	{% for row in viewArticleUses  %}
-			<li class="list-group-item">
-			<span class="badge">{{row.uses|e}}</span>
-			{{row.title|e}}
-			</li>
-	{% endfor %}
-</ul>
+				{% include "viewArticleUses.html" %}
 
 
 
 
 
-			<a href="/Fantastic-Teaching/?/Page/admin">Admin</a>
+			<a href="/Fantastic-Teaching/?/Page/menu">Menu</a>
 				{% if admin %}
 				{% include "admin.html" %}
 				{% endif %}
-				{% if viewArticleUses %}
-				{% include "viewArticleUses.html" %}
-				{% endif %}
+
 				<div class="row">
 					<div class="col-sm-12">
 						{% if changeUser %}
@@ -94,9 +28,9 @@
 				</div>
 			</div>
 			<div class="col-sm-4">
-				{% if search %}
+			
 				{% include "searchForm.html" %}
-				{% endif %}
+					
 			</div>
 			<div class="col-sm-6">
 				{% if publishNew %}
@@ -133,7 +67,7 @@
 							{% include "content.html" %}
 						{% endfor %}
 					{% endif %}
-					
+
 				{% endif %}
 				{% if singleContent %}
 						{% for row in singleContent %}
@@ -150,5 +84,4 @@
 			</div>
 		</div><!--row closed-->
 	</div><!--container closed-->
-</body>
-</html>
+{% include "footer.html" %}
