--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,23 +1,31 @@
-<div class="col-xs-12 col-sm-3 form-group">
-	<form method="post" action="">
-		<button class="transparentbtn" type="submit" name="publishNew" value="publish"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Content</button>
-	</form>	
-</div>
-{% if userLevel == "Premium" %}
+<div class="row">
 	<div class="col-xs-12 col-sm-3 form-group">
-		<form method="post" action="">
-			<button class="transparentbtn" type="submit" name="showGoals" value="goalsForm"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Goal</button>
-		</form>	
+		<form method="post" action="/fantastic-teaching/?/Page/home">
+			<button class="transparentbtn" type="submit" name="publishNew" value="publish"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Content</button>
+		</form>
 	</div>
-{% endif %}
-<div class="col-xs-12 col-sm-3 form-group">
-	<form method="get" action="">
-		<button class="transparentbtn" type="submit" name="changePassword" value="{{sessionUserID}}"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Password</button>
-	</form>
+	{% if userLevel == "Premium" %}
+		<div class="col-xs-12 col-sm-3 form-group">
+			<form method="post" action="/fantastic-teaching/?/Page/goals">
+				<button class="transparentbtn" type="submit" name="showGoals" value="goalsForm"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Goal</button>
+			</form>
+		</div>
+	{% endif %}
+	<div class="col-xs-12 col-sm-3 form-group">
+		<form method="post" action="/fantastic-teaching/?/Page/menu">
+			<button class="transparentbtn" type="submit" name="changePassword" value="{{sessionUserID}}"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Password</button>
+		</form>
+	</div>
+	<div class="col-xs-12 col-sm-3 form-group">
+		<form method="post" action="/fantastic-teaching/?/user/profile">
+			<button class="transparentbtn" type="submit" name="profile" value="{{sessionUserID}}"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Profile</button>
+		</form>
+	</div>
+	<div class="col-xs-12 col-sm-3 form-group">
+		<form method="post" action="/fantastic-teaching/?/Page/menu">
+			<button class="transparentbtn" type="submit" name="logout" value="{{sessionUserID}}">
+			<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Log out <b>{{user}}</b></button>
+		</form>
+	</div>
 </div>
-<div class="col-xs-12 col-sm-3 form-group">
-	<form method="post" action="">
-		<button class="transparentbtn" type="submit" name="logout" value="{{sessionUserID}}">
-		<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Log out <b>{{user}}</b></button>
-	</form>
-</div>
+
