--- a/templates/searchForm.html
+++ b/templates/searchForm.html
@@ -1,4 +1,5 @@
-<form method="post" action="">
+<div class="row">
+<form method="post" action="?/Article/search">
 	<div class="form-group">
 		<label for="subject">Search within subject:</label>
 		<select class="form-control" name="searchSubject">
@@ -26,3 +27,4 @@
 	    </span>
 	</div>
 </form>
+</div>
