--- a/templates/header.html
+++ b/templates/header.html
@@ -2,12 +2,27 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>{{title}}</title>
+<title>Fantastic Teaching</title>
 <!-- Latest compiled and minified CSS BOOTSTRAP -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <style type="text/css">
+  body{
+    background: url(https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=3f9c78df0edb464244bbabb04d1797d8) no-repeat center center fixed;
+    background-size: cover;
+  }
+  .container{
+    background-color: white;
+    opacity: 0.85;
+    border-radius: 10px;
+  }
   .grayText{
     color: silver;
+  }
+  .italics{
+    font-style: italic;
+  }
+  .centered{
+    text-align: center;
   }
   .h1link{
     color: black;
@@ -33,7 +48,7 @@
   }
   .transparentbtn:hover{
     background-color: transparent;
-    color: white;
+    color: silver;
   }
   .transparentbtn:focus{
     background-color: transparent;
@@ -54,8 +69,11 @@
 </head>
 <body>
 <div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <a class="h1link" href="/Fantastic-Teaching/?/user/home"><h1>Fantastic Teaching</h1></a>
+  <div id="wrapper">
+    <div class="row">
+      <div class="col-lg-12">
+        <a class="h1link" href="/Fantastic-Teaching/?/user/home">
+        <h1>Fantastic Teaching</h1>
+        </a>
+      </div>
     </div>
-  </div>
