--- a/templates/index.html
+++ b/templates/index.html
@@ -1,87 +1,5 @@
-
-{% include "header.html" %}
-
-	<div class="container-fluid">
-		<div class="row user-header">
-			<div class="col-lg-12">
-				<a class="h1link" href="/Fantastic-Teaching/?/Page/home"><h1>{{title}}</h1></a>
-			</div>
-			<div class="col-sm-8">
-
-				{% include "viewArticleUses.html" %}
+{% for template in templates %}
+	{% include template %}
+{% endfor %}
 
 
-
-
-
-			<a href="/Fantastic-Teaching/?/Page/menu">Menu</a>
-				{% if admin %}
-				{% include "admin.html" %}
-				{% endif %}
-
-				<div class="row">
-					<div class="col-sm-12">
-						{% if changeUser %}
-						{% include "changeUser.html" %}
-						{% endif %}
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-4">
-			
-				{% include "searchForm.html" %}
-					
-			</div>
-			<div class="col-sm-6">
-				{% if publishNew %}
-				{% include "publishNew.html" %}
-				{% endif %}
-			</div>
-			{% if userLevel == "Premium" %}
-				<div class="col-sm-6">
-					{% if goalsForm %}
-					{% include "goalsForm.html" %}
-					{% endif %}
-				</div>
-				<div class="col-sm-12">
-					{% if goals %}
-						{% for rowGoals in goals %}
-							{% include "goals.html" %}
-						{% endfor %}
-					{% endif %}
-				</div>
-			{% endif %}
-		</div>
-		<div class="row">
-			<div class="col-sm-12 form-group">
-				{% if getAllContentBTN %}
-					<form method='post' action=''>
-					<button class='btn btn-default' type='submit' name='getAllContentBTN'>Show all content</button>
-					</form>
-				{% endif %}
-			</div>
-			<div class="col-sm-12">
-				{% if allContent %}
-					{% if goals %}
-						{% for row in allContent %}
-							{% include "content.html" %}
-						{% endfor %}
-					{% endif %}
-
-				{% endif %}
-				{% if singleContent %}
-						{% for row in singleContent %}
-							{% include "singleContent.html" %}
-						{% endfor %}
-					{% endif %}
-			</div>
-			<div class="col-sm-12">
-			{% if getAllContentBTN %}
-				<form method='post' action=''>
-				<button class='btn btn-default' type='submit' name='getAllContentBTN'>Show all content</button>
-				</form>
-			{% endif %}
-			</div>
-		</div><!--row closed-->
-	</div><!--container closed-->
-{% include "footer.html" %}
