--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,29 +1,29 @@
 <div class="row">
-	<div class="col-xs-12 col-sm-3 form-group">
-		<form method="post" action="/fantastic-teaching/?/Page/home">
+	<div class="col-xs-12 col-sm-2 form-group">
+		<form method="post" action="/fantastic-teaching/?/Content/contentForm">
 			<button class="transparentbtn" type="submit" name="publishNew" value="publish"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Content</button>
 		</form>
 	</div>
-	{% if userLevel == "Premium" %}
-		<div class="col-xs-12 col-sm-3 form-group">
-			<form method="post" action="/fantastic-teaching/?/Page/goals">
-				<button class="transparentbtn" type="submit" name="showGoals" value="goalsForm"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Goal</button>
+	{% if userLevel == 'Premium' %}
+		<div class="col-xs-12 col-sm-2 form-group">
+			<form method="post" action="/fantastic-teaching/?/GoalsController/goalsForm">
+				<button class="transparentbtn" type="submit" name="newGoal" value="{{userID}}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Goal</button>
 			</form>
 		</div>
 	{% endif %}
-	<div class="col-xs-12 col-sm-3 form-group">
-		<form method="post" action="/fantastic-teaching/?/Page/menu">
-			<button class="transparentbtn" type="submit" name="changePassword" value="{{sessionUserID}}"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Password</button>
+	<div class="col-xs-12 col-sm-2 form-group">
+		<form method="post" action="/fantastic-teaching/?/User/changePassword">
+			<button class="transparentbtn" type="submit" name="changePassword" value="{{userID}}"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Password</button>
 		</form>
 	</div>
-	<div class="col-xs-12 col-sm-3 form-group">
-		<form method="post" action="/fantastic-teaching/?/user/profile">
-			<button class="transparentbtn" type="submit" name="profile" value="{{sessionUserID}}"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Profile</button>
+	<div class="col-xs-12 col-sm-2 form-group">
+		<form method="post" action="/fantastic-teaching/?/User/profile">
+			<button class="transparentbtn" type="submit" name="profile" value="{{userID}}"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Profile</button>
 		</form>
 	</div>
-	<div class="col-xs-12 col-sm-3 form-group">
-		<form method="post" action="/fantastic-teaching/?/Page/menu">
-			<button class="transparentbtn" type="submit" name="logout" value="{{sessionUserID}}">
+	<div class="col-xs-12 col-sm-4 form-group">
+		<form method="post" action="/fantastic-teaching/?/Account/logout">
+			<button class="transparentbtn" type="submit" name="logout" value="{{userID}}">
 			<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Log out <b>{{user}}</b></button>
 		</form>
 	</div>
