--- a/templates/publishNew.html
+++ b/templates/publishNew.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<h3>Publish new content</h3>
-	<form method='post' action="/fantastic-teaching/?/Page/home" enctype="multipart/form-data">
+	<form method='post' action="/Fantastic-Teaching/?/Content/add" enctype="multipart/form-data">
 		<div class="form-group">
 			<label for="title">Title:</label>
 			<input class="form-control" autofocus required type='text' name='title' placeholder='Add title...'>
