--- a/templates/searchForm.html
+++ b/templates/searchForm.html
@@ -1,30 +1,32 @@
 <div class="row">
-<form method="post" action="?/Article/search">
-	<div class="form-group">
-		<label for="subject">Search within subject:</label>
-		<select class="form-control" name="searchSubject">
-		<option value=""> </option>
-		<option value="Svenska">Svenska</option>
-		<option value="Geografi">Geografi</option>
-		<option value="Historia">Historia</option>
-		<option value="Matte">Matte</option>
-		</select>
+	<div class="col-xs-12">
+		<form method="post" action="?/Content/search">
+			<div class="form-group">
+				<label for="subject">Search within subject:</label>
+				<select class="form-control" name="searchSubject">
+				<option value=""> </option>
+				<option value="Svenska">Svenska</option>
+				<option value="Geografi">Geografi</option>
+				<option value="Historia">Historia</option>
+				<option value="Matte">Matte</option>
+				</select>
+			</div>
+			<div class="form-group">
+				<label for="year">Search on recommended year:</label>
+				<select class="form-control" name='searchYear'>
+				<option value=""> </option>
+				<option value="1-2">1-2</option>
+				<option value="3-5">3-5</option>
+				<option value="6-7">6-7</option>
+				<option value="8-9">8-9</option>
+				</select>
+			</div>
+			<div class="input-group">
+			    <input type="search" class="form-control" name="search" pattern="[^'\x22]+" title="Do not use '' characters" placeholder="Search for...">
+			    <span class="input-group-btn">
+			    <button class="btn btn-default" type="submit" value="Search">Search</button>
+			    </span>
+			</div>
+		</form>
 	</div>
-	<div class="form-group">
-		<label for="year">Search on recommended year:</label>
-		<select class="form-control" name='searchYear'>
-		<option value=""> </option>
-		<option value="1-2">1-2</option>
-		<option value="3-5">3-5</option>
-		<option value="6-7">6-7</option>
-		<option value="8-9">8-9</option>
-		</select>
-	</div>
-	<div class="input-group">
-	    <input type="search" class="form-control" name="search" pattern="[^'\x22]+" title="Do not use '' characters" placeholder="Search for...">
-	    <span class="input-group-btn">
-	    <button class="btn btn-default" type="submit" value="Search">Search</button>
-	    </span>
-	</div>
-</form>
 </div>
