--- a/templates/indexOLD.html
+++ b/templates/indexOLD.html
@@ -1,4 +1,4 @@
-
+<!-- 
 {% include "header.html" %}
 
 	<div class="container-fluid">
@@ -84,4 +84,4 @@
 			</div>
 		</div><!--row closed-->
 	</div><!--container closed-->
-{% include "footer.html" %}
+{% include "footer.html" %} -->
