--- a/templates/goalsForm.html
+++ b/templates/goalsForm.html
@@ -1,6 +1,6 @@
 <div class="row">
 <h3>Teaching Goals:</h3>
-<form method='post' action="?/user/profile">
+<form method='post' action="?/GoalsController/add">
 	<div class="form-group">
 		<label for="title">Goal:</label>
 		<input class="form-control" autofocus required type='text' name='goal' placeholder="What's your goal?">
