--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<!--<div class="container-fluid">
 		<div class="row user-header">
 			
 			<div class="col-sm-8">
@@ -39,6 +39,6 @@
 				<button class='btn btn-default' type='submit' name='getAllContentBTN'>Show all content</button>
 				</form>
 			</div>
-		</div><!--row closed-->
-	</div><!--container closed-->
-{% include "footer.html" %}
+		</div>row closed
+	</div>container closed
+{% include "footer.html" %}-->
