--- a/templates/viewArticleUses.html
+++ b/templates/viewArticleUses.html
@@ -1,5 +1,6 @@
-<div class="row">
+<div class="row" id="ArticleUses">
 	<div class="col-xs-12">
+	<h4>Hur många använder mitt matrial</h4>
 		<ul class="list-group">
 			{% for row in viewArticleUses  %}
 				{% if row.user ==  userID %}
