function added template added
delete goals

--- a/templates/goals.html
+++ b/templates/goals.html
@@ -3,7 +3,6 @@
 {% for rowGoals in goals %} 
 <div class="col-xs-12 col-sm-6 col-md-4">
 	<div class="thumbnail">
-	<!-- senast ändrat måndag. ska vi ha kvar? -->
 		<h4>{{ rowGoals.goal }}</h4>
 		<p>Subject: {{rowGoals.subject|e}}</p>
 		<p>For year: {{rowGoals.year|e}}</p>
@@ -12,14 +11,7 @@
 		{% include "connectedContents.html" %}
 		{% endif %} 
 		{% endif %} 
-		 <!-- senast ändrat måndag. ska vi ha kvar? -->
-	</div>
-
-	<a href="/fantastic-teaching/?/GoalsController/singleGoal/{{rowGoals.id}}">Overview this goal</a>
-	<div class="form-group">
-		<form method="post" action="">
-			<button class="transparentbtn" type="submit" name="deleteGoalID" value="{{rowGoals.id}}"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Delete goal</button>
-		</form>
+		{% include 'goalBtns.html' %}
 	</div>
 </div>
 {% endfor %}
