--- a/templates/goalsForm.html
+++ b/templates/goalsForm.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="col-xs-12">
 <h3>Teaching Goals:</h3>
 <form method='post' action="?/GoalsController/add">
 	<div class="form-group">
