--- a/templates/singleGoal.html
+++ b/templates/singleGoal.html
@@ -1,5 +1,5 @@
 <div class="row">
-<div class="col-sm-6 col-md-4">
+<div class="col-xs-12">
 {% if singleGoal %}
 	<div class="thumbnail">
 		<h4>{{ row.goal }}</h4>
@@ -16,11 +16,7 @@
 				</li>
 			{% endfor %}
 		</ul>
-	</div>
-	<div class="form-group">
-		<form method="post" action="">
-			<button class="transparentbtn" type="submit" name="deleteGoalID" value="{{row.goal_id}}"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Delete goal</button>
-		</form>
+		{% include 'goalBtns.html' %}
 	</div>
 {% endif %}
 </div>
