--- a/templates/publishNew.html
+++ b/templates/publishNew.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="col-xs-12">
 	<h3>Publish new content</h3>
 	<form method='post' action="/Fantastic-Teaching/?/Content/add" enctype="multipart/form-data">
 		<div class="form-group">
