--- a/templates/singleGoal.html
+++ b/templates/singleGoal.html
@@ -1,32 +1,8 @@
 <div class="row">
-<div class="col-sm-6 col-md-4">
-{% if singleGoal %}
-	<div class="thumbnail">
-		<h4>{{ row.goal }}</h4>
-		<p>Subject: {{row.subject|e}}</p>
-		<p>For year: {{row.year|e}}</p>
-		<h5>Content connected to this goal:</h5>
-		<ul>
-			{% for row in singleGoal %}
-				<li>
-					<form method="post" action="">
-						{{row.title|e}} - {{row.estimate|e}} h
-						<button class="transparentbtn" type="submit" name="deleteConnectionID" value="{{row.connection_id}}"><span class="glyphicon glyphicon-check" aria-hidden="true"></span> Done</button>
-					</form>
-				</li>
-			{% endfor %}
-		</ul>
-	</div>
-	<div class="form-group">
-		<form method="post" action="">
-			<button class="transparentbtn" type="submit" name="deleteGoalID" value="{{row.goal_id}}"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Delete goal</button>
-		</form>
-	</div>
-{% endif %}
+ 	Goal: {{ singleGoal.goal }}
+
+	{% for row in singleGoal.items %}
+		<p> Content titel: {{ row.title }} </p>
+	{% endfor %}
+	<hr>
 </div>
-</div>
-
-
-
-
-
